--- a/index.css
+++ b/index.css
@@ -162,6 +162,7 @@ section{
     height: 100vh;
     flex-direction: row;
     justify-content: center;
+    
 }
 .contenedor{
     display: flex;
@@ -214,32 +215,41 @@ section:not(.hero) div:last-child{
 
 }
 /*Estilos hero*/
-/*
-#videoHero{
-    position: absolute;
-    
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-    
-}
-*/
+
+
 .hero{
     position: relative;
     height: 100vh;
-    margin: 0px 0px;
+    margin-top: 35px;
+    margin-bottom: 35px;
     flex-direction: column;
 
     overflow: hidden;
     
 }
 
+
+#videoHero{
+    
+    
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    
+    
+}
+
 .hero .contenedor{
     flex-direction: column;
     height: 100%;
+}
+
+#contenedorVideoHero{
+    display: flex;
+    height: 50%;
+    
 }
 .imageHero{
     background-image: url(img//imagenHero.jpg);
@@ -302,9 +312,14 @@ section:not(.hero) div:last-child{
 /*Estilos seccion info*/
 
 .slider-container {
+    flex-direction: column;
+    
+    display: flex;
     position: relative;
     width: 50%;
     overflow: hidden; /* Oculta las imágenes fuera del contenedor */
+    justify-content: center;
+    margin-right: 0px;
   }
 
   
@@ -346,17 +361,26 @@ section:not(.hero) div:last-child{
     right: 0;
   }
   
-#info .fondo{
-    background-color: #87c0ad;
+#info .image{
+    background-image: url("img/placeHolderVertical.png");
 }
-
-#info .text{
-    width: 40%;
+/*Estilos seccion beneficios*/
+#beneficios{
+    flex-direction: column;
+    align-items: center;
 }
-
+#beneficios .image{
+    background-image: url(img/placeHolderHoriz.png);
+    height: 50%;
+    width: 100%;
+}
 /*Estilos seccion about us*/
+#aboutUs .contenedor{
+    align-items: center;
+}
 #aboutUs .image{
     background-image: url(img/imagenAboutUs.jpg);
+    height: 60vh;
 
 }
 /*Estilos seccion reseñas*/
@@ -381,6 +405,7 @@ section:not(.hero) div:last-child{
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 10px;
+    width: 17%;
 }
 .contenidoTarjeta{
     width: 300px;
