--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
     --color2: #0A4D09;
     --color3: #053304;
     --color4: #F0C8A2;
-    --color5: #F2F3F4;
+    --color5: white;
     --color6:#D1D6D7;
     --negro: #080808;
     
