--- a/index.css
+++ b/index.css
@@ -4,13 +4,16 @@
     --colorPrincipal: #0A4D09;
     --colorPrincipalFuerte: #083d07;
     --colorPrincipalDiluido: #00FF00;
+    --rojoFuerte:#aa0000;
+    --rojoPastel:#ff8080;
+    --verdePastel: #55ff55;
 }
 
 
 *{
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    
     
 }
 html body{
@@ -18,11 +21,36 @@ html body{
 }
 body{
     background-color: var(--colorFondo);  
-    padding: 0 5%;  
+    padding: 0 2.5%;  
+    font-size: 16px;
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    line-height: 1.3;
 }
+h1{
+    font-size: 1.9rem;
+}
+h2{
+    font-size: 1.5rem;
+}
+h3{
+    font-size: 1.25rem;
+}
+span{
+    font-size: 1.1rem;
+    font-style: normal;
+    font-weight: 200;
+}
+p, li{
+    font-size: 1rem;
+    font-style: normal;
+}
+
 h1,h2,h3,p,a{
     color: black;
     text-decoration: none;
+    letter-spacing: 1px;
 }
 section{
     min-height: 100vh;
@@ -61,9 +89,13 @@ img{
     border-radius: 50px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+img.imagenTexto{
+    border-radius: 0;
+    box-shadow: none;
+}
 
 .boton{
-    font-size: 1.15em;
+    
     color: var(--colorFondo);
     background-color: transparent;
     padding: 15px 25px;
@@ -72,13 +104,19 @@ img{
     position: relative;
     overflow: hidden;
     transition:border-radius 0.5s ease;
-    
+    min-width: 150px;
+    min-height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
     
 }
 .textoBoton{
     position: relative;
     z-index: 1;
+    font-size: 1.15em !important;
+    font-weight: 700;
 }
 .boton::after {
     content: "";
@@ -128,6 +166,8 @@ header{
 
 .logo{
     font-size: 3.6rem;
+    font-weight: 400;
+    font-style: italic;
 }
 
 #menu-toggle{
@@ -186,6 +226,7 @@ header .barraDecorativa{
     justify-content: space-around;
     flex-direction: column;;
     margin-top: 5%;
+    
 }
 
 .hero #contenedorVideoHero{
@@ -197,16 +238,36 @@ header .barraDecorativa{
 }
 
 .hero #contenedorContenidoHero{
-    margin-top: 20px;
+    background: blur(5px), url(img/fondoMandalas.png);
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
     height: 50%;
     text-align: center;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
-    
+    z-index: 1;
+        
 }
+.hero #contenedorContenidoHero::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url('img/fondoMandalas.png');
+    background-size: cover;
+    background-position: center;
+    filter: blur(0.5px);
+    z-index: -1; /* Esto asegura que el pseudo-elemento quede detrás del contenido */
+  }
+
 
 .hero #botonera{
+    margin-top: 25px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -215,10 +276,172 @@ header .barraDecorativa{
     
 }
 
+/*Estilos seccion info*/
+.info h1{
+    margin: 0;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    white-space: nowrap;
+
+    
+}
+.fondoPincelada{
+    background: url(img/pincelada.png) no-repeat center;
+    background-size: cover;
+    width: 100%;
+    height: 90px;
+    overflow: hidden;
+    color: white;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    top: 1px;
+    position: relative;
+    transform: rotate(-5deg);
+    margin: 10px 0px;
+    font-size: inherit !important;
+    font-family: inherit;
+    font-weight: inherit;
+    font-style: inherit;
+    border: 1px solid transparent;
+    max-width: 500px;
+}
+.rellenoPincelada{
+    position: relative;
+    top: -13px;
+    font-size: inherit !important;
+    font-family: inherit;
+    font-weight: inherit;
+    font-style: inherit;
+}
 /*Estilos seccion beneficios*/
+.beneficios{
+    display: flex;
+    flex-direction: column;
+}
+.beneficios .contenedor{
+    height: 100%;
+    
+}
+.beneficios .contenidoBeneficios{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    
+    align-items: center;
+}
+.beneficios #seccion1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+.beneficios #seccion1 a{
+    display: flex;
+    height: 34%;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 
+}
+.beneficios #seccion1 a:hover{
+    box-shadow: none;
+    
+}
+.beneficios #seccion1 a:not(:last-child){
+    margin-bottom: 20px;
+    background-color: var(--colorPrincipal);
+    color: var(--colorPrincipal);
+}
+.beneficios #seccion1 a:not(:last-child)::after{
+    background-color: var(--verdePastel);
+}
+.beneficios #seccion1 a:not(:last-child):hover{
+    color: var(--verdePastel);
+}
+.beneficios #seccion1 a:last-child{
+    background-color: var(--rojoFuerte);
+    color: var(--rojoFuerte);
+}
+.beneficios #seccion1 a:last-child:hover{
+    color: var(--rojoPastel);
+}
+.beneficios #seccion1 a:last-child::after{
+    background-color: var(--rojoPastel);
+}
 
+.sliderContainer{
+    position: relative;
+    width: 50%;
+    height: 80% !important;
+    overflow: hidden;
+    
+}
+.sliderContainer button { /* Se aplica a todos los botones */
+    position: absolute;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    font-size: 18px;
+}
+.slider{
+    display: flex;
+    flex-direction: column;
+    transition: transform 0.5s ease-in-out;
+    width: 100%;
+    position: relative;
+
+}
+
+.slider img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 0;
+    box-shadow: none;
+
+    transition: transform 0.5s ease-in-out;
+    
+}
+
+.slider img:hover{
+    transform: scale(1.3);
+}
+
+/**
+.slider::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    pointer-events: none; Permite que los clics pasen a la imagen 
+}
+**/
+
+#prev{
+    top: 0;
+    border-radius: 15px 15px 0 0;
+
+}
+
+#next{
+    bottom: 0;
+    border-radius: 0px 0px 15px 15px;
+}
 /*About Us*/
+
 /* Estilos comunes para los h1, h2 y p dentro de .aboutUs, .info y .beneficios */
 section.aboutUs h1, section.aboutUs p,
 section.info h1, section.info p,
@@ -371,5 +594,81 @@ textarea:focus::placeholder {
     to{
         opacity: 0;
         left: 100%;
+    }
+}
+
+/*Estilos 768px X xxxxpx*/
+@media (max-width: 768px){
+
+    body{
+        padding: 0 20px;
+        font-size: 0.875em;
+    }
+    .info h1{
+        white-space: wrap;
+
+    }
+    .fondoPincelada{
+        height: 60px;
+    }
+    .rellenoPincelada{
+        font-size: 0.8em !important;
+    }
+    h1{
+        font-size: 1.5em;
+        
+    }
+    h2{
+        font-size: 1.375em;
+    }
+    h3{
+        font-size: 1.25em
+    }
+    p{
+        font-size: 1em;
+    }
+    .contenedor{
+        width: 100%;
+    }
+
+
+    #imagen{
+        display: none;
+    }
+
+    .beneficios{
+        flex-direction: column;
+    }
+
+    .beneficios h1{
+        margin-top: 20px;
+    }
+    .boton{
+        min-width: 150px;
+        padding: 5px 5px;
+    }
+    .beneficios .contenidoBeneficios{
+        display: flex;
+        flex-direction: column-reverse;
+        height: 70%;
+    }
+    .beneficios #seccion1{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        height: 20%;
+    }
+    .beneficios #seccion1 a{
+        margin: 0 !important;
+        width: 20%;
+        height: auto;
+        min-width: 0;
+        padding: 10px 40px;
+    }
+
+    .sliderContainer{
+        display: flex;
+        flex-direction: row;
     }
 }
