--- a/index.css
+++ b/index.css
@@ -154,21 +154,65 @@ img.imagenTexto{
 
 header{
     width: 100%;
+    height: 370px;
     display: flex;
     flex-direction: column;
     justify-content:center;
     align-items: center;
     padding: 0 0;
     padding-top: 20px;
+
     
+    
+}
+header .linkLogo{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+header .menuMovil{
+    width: 100%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+header .logo{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    position: relative;
+    cursor: pointer;
+    
+}
+header .logo img{
+    border-radius: 0;
+    box-shadow: none;
+    position: absolute;
+    bottom: 100%;
+    width: 100%; 
     
 }
 
-.logo{
-    font-size: 3.6rem;
-    font-weight: 400;
-    font-style: italic;
+header .logo .logoFondo{
+    clip-path: inset(0 0 0 0);
+    transition: clip-path 3s ease;
 }
+header .logo .logoTexto{
+    z-index: 2;
+    transition: transform 3s ease;
+}
+header .logo:hover {
+    .logoFondo{
+        clip-path: inset(0 50% 0 50%);
+    }
+
+    .logoTexto{
+        transform: scale(1.2);
+    }
+}
+
 
 #menu-toggle{
     display: none;
@@ -224,8 +268,8 @@ header .barraDecorativa{
 
 .hero{
     justify-content: space-around;
-    flex-direction: column;;
-    margin-top: 5%;
+    flex-direction: column;
+    margin-top: 0;
     
 }
 
@@ -236,6 +280,7 @@ header .barraDecorativa{
     
     
 }
+
 
 .hero #contenedorContenidoHero{
     background: blur(5px), url(img/fondoMandalas.png);
