--- a/index.css
+++ b/index.css
@@ -451,7 +451,7 @@ header .barraDecorativa{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 0;
+    border-radius: 15px;
     box-shadow: none;
 
     transition: transform 0.5s ease-in-out;
@@ -460,6 +460,7 @@ header .barraDecorativa{
 
 .slider img:hover{
     transform: scale(1.3);
+    border-radius: 50px;
 }
 
 /**
@@ -688,6 +689,7 @@ textarea:focus::placeholder {
     .beneficios h1{
         margin-top: 20px;
     }
+
     .boton{
         min-width: 150px;
         padding: 5px 5px;
@@ -711,9 +713,14 @@ textarea:focus::placeholder {
         min-width: 0;
         padding: 10px 40px;
     }
-
-    .sliderContainer{
-        display: flex;
-        flex-direction: row;
+    .slider{
+        display: block;
     }
+    .slider img{
+        
+    }
+    .slider img:hover{
+        transform: scale(1);
+    }
+   
 }
