--- a/index.css
+++ b/index.css
@@ -174,6 +174,7 @@ header{
     z-index: 1000;
     background-color: var(--colorFondo);
     transition: top 0.3s ease-out;
+    max-width: 100%;
 
     
     
@@ -461,7 +462,37 @@ header .barraDecorativa{
     width: 100%;
     position: relative;
     flex-wrap: nowrap;
+    font-size: 0px;
 
+}
+.capsulaSlider{
+    position: relative;
+    align-items: center;
+    height: auto;
+    background: var(--verdePastel);
+}
+#beneficios .slider h2{
+    
+    position: absolute; /* Posiciona el texto sobre la imagen */
+    top: 40%; /* Lo centra verticalmente dentro del contenedor */
+    left: 50%; /* Lo centra horizontalmente dentro del contenedor */
+    /* Ajusta para centrar perfectamente el texto */
+    color: white; /* Hace que el texto sea visible si la imagen es oscura */
+    font-size: 1.5rem; /* Tamaño del texto */
+    align-items: center;
+    transform: translate(-50%,-50%);
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));;
+    z-index: 2;
+    width: 100%;
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    line-height: 1.5;   
+    pointer-events: none;
+    
+    
 }
 
 .slider img{
@@ -470,9 +501,10 @@ header .barraDecorativa{
     object-fit: cover;
     border-radius: 15px;
     box-shadow: none;
-
-    transition: transform 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out, opacity 1.5s ease-in-out;
     
+    z-index: 0;
+
 }
 
 .slider img:hover{
