--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ p{
     flex-wrap: wrap;
     justify-content: center; /* Centrado horizontal */
     align-items: center; /* Centrado vertical */
-    gap: 10px; /* Espaciado entre elementos */
+    
 }
 
 section{
@@ -135,6 +135,13 @@ section.Beneficios{
     background-color: var(--fondo2);
 }
 
+section.Beneficios h1{
+    font-family: "Zilla Slab", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 40px;
+    color: var(--fondoTarjetas);
+}
 .containerTarjetas{
     display: flex;
     flex-direction: row;
@@ -145,12 +152,16 @@ section.Beneficios{
 
 .tarjeta{
     background-color: var(--fondoTarjetas);
-    width: 20%;
+    width: 22%;
     height: 100%;
     min-width: 100px;
-    min-height: 440px;
+    min-height: 400px;
     padding: 1% 2%;
     border-radius: 10px;
+    
+}
+.tarjeta p{
+    margin-bottom: 0;
     
 }
 .tarjeta img{
