--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
     --fondo2:#dee9de;
     --colorh1: #3bb371;
     --fondoTarjetas:#2d6638;
+    --fondoFormulario: #d1c8c1;
 }
 @font-face {
     font-family: 'TAN-NIMBUS';
@@ -167,4 +168,151 @@ section.Beneficios h1{
 .tarjeta img{
     height: 50%;
     width: 40%;
+}
+
+/*
+==========Estilos secccion Ventas============= 
+*/
+section.Ventas{
+    flex-direction: column;
+    justify-content: start;
+}
+section.Ventas .columna1{
+    margin-top: 10px;
+    
+}
+
+section.Ventas .contenido{
+    border-top: 1px solid black;
+    height: 60%;
+    gap: 50px;
+    width: 100%;
+}
+
+.tarjetaVenta{
+    display: flex;
+    flex-direction: column;
+    padding: 10px 10px;
+    margin-top: 20px;
+    width: 20%;
+    height: 100%;
+    justify-content: start;
+    text-align: center;
+    background-color: white;
+}
+
+.tarjetaVenta p{
+   margin-bottom: 10px;
+}
+.tarjetaVenta a{
+    background-color: gray;
+    flex-wrap: nowrap;
+    margin-top: 5px;
+    padding: 10px 0;
+    width: 100%;
+    text-decoration: none;
+    color: black;
+}
+.tarjetaVenta img{
+    flex-wrap: nowrap;
+    object-fit: cover;
+    width: 100%;
+    height: 60%;
+    margin-bottom: 30px;
+    
+    
+}
+
+/*
+==========Estilos secccion Reseñas============= 
+*/
+
+section.Reseñas{
+    background-color: var(--fondo2);
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 130vh;
+}
+section.Reseñas .titulo{
+    display: flex;
+    flex-direction: column;
+    height: 20%;
+    flex-wrap: nowrap;
+}
+section.Reseñas .titulo h3,h1{
+    margin-bottom: 10px;
+
+}
+section.Reseñas img{
+    
+    width: 50%;
+}
+section.Reseñas .tarjetas{
+    height: 60%;
+    gap: 50px;
+}
+
+section.Reseñas .tarjetas .tarjetaReseña{
+    display: flex;
+    flex-direction: column;
+    height: 50%;
+    padding: 0 100px;
+    background-color: white;
+    box-shadow: 2px 2px 5px 3px rgba(0, 0, 0, 0.2);
+    max-height: 200px;
+}
+
+/*
+==========Estilos secccion Contactanos============= 
+*/
+section.Contactanos{
+    flex-direction: row;
+    justify-content: center;
+    gap: 80px;
+}
+section.Contactanos .container{
+    height: 100%;
+    width: 40%;
+    flex-direction: column;
+
+}
+section.Contactanos form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: right;
+}
+section.Contactanos input, textarea{
+    background-color: var(--fondoFormulario);
+    border: none;
+    margin-bottom: 30px;
+    width: 95%;
+    padding-left: 20px;
+    height: 45px;
+
+}
+section.Contactanos input::placeholder, textarea::placeholder{
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    color: black;
+}
+
+section.Contactanos textarea{
+    padding-top: 20px;
+    height: 150px;
+
+}
+
+
+section.Contactanos button{
+    background-color: var(--fondoFormulario);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 10px 20px;
+    width: 30%;
+    margin-left: 69%;
 }
